<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="action_seekcurrentposition">Seek offset test: to current position</string>
    <string name="action_seekcurrentpositionplus1ms">Seek offset test: to current position + 1ms</string>
    <string name="action_seektoend">Seek to end test</string>
    <string name="action_getcurrentposition">Toast current position</string>
    <string name="title_activity_side_by_side">Android VideoView vs. MPX VideoView</string>
    <string name="title_activity_videoview">VideoView Demo</string>
    <string name="videoview_sbs">VideoView Comparison</string>
    <string name="androidvv">Android VideoView</string>
    <string name="mpxvv">MPX VideoView</string>
    <string name="toggle_parameters">Parameters</string>
    <string name="save_frame">Save Frame</string>
    <string name="effects">Effects</string>
    <string name="parameter_reset_short">RST</string>
    <string name="description_headline">Welcome to the MediaPlayer-Extended Library Showcase!</string>
    <string name="description_text">This technical demo shows the key features of the library in a very simple app and serves as a reference on how to use the components in Java code. This app is not intended to be used as a video player application by end users. The library sources and a detailed description are available at the following link:</string>
    <string name="library_url">https://github.com/protyposis/MediaPlayer-Extended</string>
    <string name="uri_missing">no URI selected</string>
    <string name="feature_videoview">VideoView</string>
    <string name="feautre_videoview_description">VideoView replaces the VideoView of the Android API.</string>
    <string name="feature_sidebyside">MPX ViewView / Android VideoView comparison</string>
    <string name="feature_sidebyside_description">A side by side comparison of both implementations. Not available for DASH content.</string>
    <string name="copyright_notice">Copyright © 2014–2017 Mario Guggenberger. Released under the Apache 2.0 license. http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://protyposis.net/android-privacy-policy/</string>
    <string name="action_halfspeed">0.5x Speed</string>
    <string name="action_doublespeed">2.0x Speed</string>
    <string name="action_quadspeed">4.0x Speed</string>
    <string name="action_normalspeed">1.0x Speed</string>
    <string name="action_slowspeed">0.2x Speed</string>
    <string name="feature_sidebyside_seektest">VideoView SeekMode comparison</string>
    <string name="feature_sidebyside_seektest_description">A side by side comparison of the available seek modes.</string>
    <string name="title_activity_side_by_side_seektest">VideoView SeekMode Comparison</string>
    <string name="zoom_pan_info">Zoom and pan the picture with touch gestures, double tap to reset the viewport.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openvideo_description">Open a video file or DASH MPD from any app (e.g. the web browser), or select one of these options:</string>
    <string name="openvideo_pick">Pick a file</string>
    <string name="openvideo_type">Paste or type URL</string>
    <string name="openvideo_dash_hint">Hint: If the URL to a DASH MPD does not end in the .mpd extension, you can hint a DASH stream by prepending \'dash://\' in front of the actual URL.</string>
    <string name="action_reload_source">Reload source</string>
</resources>
