<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Mario Guggenberger <mg@protyposis.net>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Feature.Description"
            android:text="@string/openvideo_description" />

        <Button
            android:id="@+id/videoselect"
            style="@style/Feature.Button"
            android:text="@string/openvideo_pick" />

        <Button
            android:id="@+id/videoselect2"
            style="@style/Feature.Button"
            android:text="@string/openvideo_type" />

        <TextView
            android:id="@+id/videouri"
            style="@style/Feature.Description"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:text="@string/uri_missing" />

        <Button
            android:id="@+id/videoview"
            style="@style/Feature.Button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/feature_videoview" />

        <TextView
            style="@style/Feature.Description"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:text="@string/feautre_videoview_description" />

        <Button
            android:id="@+id/sidebyside"
            style="@style/Feature.Button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/feature_sidebyside" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:text="@string/feature_sidebyside_description"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sidebysideseektest"
            style="@style/Feature.Button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/feature_sidebyside_seektest" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:text="@string/feature_sidebyside_seektest_description"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>